# spot_cpp

./: CMakeLists.txt  defines.h  main.cpp  main.h
crc/: crc.cpp  crc.h
device_class/: device.h
message_exchange/: message_exchange.cpp  message_exchange.h
network/: connect_to_master.cpp  connect_to_master.h  network.cpp  network.h  socket_src.cpp  socket_src.h
packets/: packet_struct.h  packets.cpp  packets.h
radio_receive/: radio_receive.h
spot_class/: spot.cpp  spot.h
test_func/: test_func.cpp  test_func.h
